--- a/src/XisfSharp/XisfSharp.csproj
+++ b/src/XisfSharp/XisfSharp.csproj
@@ -16,6 +16,8 @@
     <Title>XisfSharp</Title>
     <RepositoryUrl>https://github.com/alexhelms/XisfSharp</RepositoryUrl>
     <PackageReadmeFile>README.md</PackageReadmeFile>
+    <IncludeSymbols>true</IncludeSymbols>
+    <SymbolPackageFormat>snupkg</SymbolPackageFormat>
   </PropertyGroup>
 
   <ItemGroup>
@@ -23,7 +25,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Include="README.md">
+    <None Include="$(SolutionDir)README.md">
       <Pack>True</Pack>
       <PackagePath>\</PackagePath>
     </None>
