--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -37,3 +37,7 @@ jobs:
 
     - name: Test
       run: dotnet test --configuration Release --no-build
+
+    - name: Pack
+      run: |
+        dotnet pack --configuration Release --no-build --output ./artifacts
