--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -38,7 +38,12 @@ jobs:
           10.0.x
 
     - name: Build
-      run: dotnet build --configuration Release
+      run: |
+        dotnet tool restore
+        dotnet build --configuration Release
+
+    - name: Show Version
+      run: dotnet tool run dotnet-gitversion
 
     - name: Test
       run: dotnet test --configuration Release --no-build
