--- a/src/Directory.Packages.props
+++ b/src/Directory.Packages.props
@@ -5,13 +5,11 @@
   <ItemGroup>
     <!-- Application -->
     <PackageVersion Include="K4os.Compression.LZ4" Version="1.3.8" />
-	  <PackageVersion Include="ZstdSharp.Port" Version="0.8.7" />
-    
+    <PackageVersion Include="ZstdSharp.Port" Version="0.8.7" />
     <!-- Dev -->
-    <PackageVersion Include="Nerdbank.GitVersioning" Version="3.9.50" />
-    
+    <PackageVersion Include="GitVersion.MsBuild" Version="6.5.1" />
     <!-- Testing -->
-    <PackageVersion Include="Microsoft.Testing.Extensions.CodeCoverage" Version="18.1.0" />
+    <PackageVersion Include="Microsoft.Testing.Extensions.CodeCoverage" Version="18.3.2" />
     <PackageVersion Include="Microsoft.Testing.Extensions.TrxReport" Version="2.0.2" />
     <PackageVersion Include="MSTest.TestAdapter" Version="4.0.2" />
     <PackageVersion Include="MSTest.TestFramework" Version="4.0.2" />
