--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -17,10 +17,7 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       contents: read
-    strategy:
-      matrix:
-        dotnet: ['8.0.x', '10.0.x']
-    name: Build for dotnet ${{ matrix.dotnet }}
+    name: Build
     steps:
     - name: Checkout
       uses: actions/checkout@v6
@@ -30,7 +27,9 @@ jobs:
     - name: Setup dotnet
       uses: actions/setup-dotnet@v5
       with:
-        dotnet-version: ${{ matrix.dotnet }}
+        dotnet-version: |
+          8.0.x
+          10.0.x
 
     - name: Build
       run: |
