--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -25,9 +25,9 @@ jobs:
         fetch-depth: 0
 
     - name: Setup dotnet
-      uses: actions/setup-dotnet@v5
+      uses: fast-actions/setup-dotnet@v1
       with:
-        dotnet-version: |
+        sdk-version: |
           8.0.x
           10.0.x
 
