--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -31,9 +31,9 @@ jobs:
         git checkout ${{ github.event.inputs.tag_name }}
 
     - name: Setup dotnet
-      uses: actions/setup-dotnet@v5
+      uses: fast-actions/setup-dotnet@v1
       with:
-        dotnet-version: |
+        sdk-version: |
           8.0.x
           10.0.x
 
